website/versioned_docs/version-2.1.x/docs/writing-plugins/the-rules-api/options-and-subsystems.mdx
---
    title: Options and subsystems
    position: 2
---

How to add options to your plugin.

---

As explained in [Options](doc:options), options are partitioned into named scopes, like `[test]` and `[isort]`. Each of these scopes corresponds to a _subsystem_.

To add new options:

1. Define a subclass of `Subsystem` from `pants.subsystem.subsystem`.
    1. Give a description in the docstring.
    1. Set the class property `options_scope` with the name of the subsystem.
         * This value will be prepended to all options in the subsystem, e.g. `--skip` will become `--shellcheck-skip`.
2. Add new options through the class method `register_options()`.
3. Register the `Subsystem`  in a `register.py` file.
[block:code]
{
  "codes": [
    {
      "code": "from pants.engine.rules import collect_rules\nfrom pants.option.subystem import Subsystem\n\n\nclass Shellcheck(Subsystem):\n    \"\"\"The Shellcheck linter.\"\"\"\n \n    options_scope = \"shellcheck\"\n    \n    @classmethod\n    def register_options(cls, register):\n        super().register_options(register)\n        register(\n            \"--skip\",\n            type=bool,\n            default=False,\n            help=\"Don't use Shellcheck when running `./pants lint`.\"\n        )\n    \n\ndef rules():\n    return collect_rules()",
      "language": "python",
      "name": "pants-plugins/example/shellcheck.py"
    },
    {
      "code": "from example import shellcheck\n\ndef rules():\n    return [*shellcheck.rules()]",
      "language": "python",
      "name": "pants-plugins/example/register.py"
    }
  ]
}
[/block]
The subsystem should now show up when you run `./pants help shellcheck`.
[block:callout]
{
  "type": "info",
  "title": "`GoalSubsystem`",
  "body": "As explained in [Goal rules](doc:rules-api-goal-rules), goals use a subclass of  `Subsystem`: `GoalSubsystem` from `pants.engine.goal`.\n\n`GoalSubsystem` behaves the same way as a normal subsystem, except that you set the class property `name` rather than `options_scope`. The `name` will auto-populate the `options_scope`."
}
[/block]

[block:api-header]
{
  "title": "`register()` parameters"
}
[/block]
### Flag name

The first argument to `register()` should be a string with the option name, like, `--example-option`. 

When users use a command-line flag, the option will get prefixed with the `options_scope`, e.g. `--shellcheck-skip`. With config files, every `-` will be replaced by `_`, e.g. `example_option`.

You may also specify a short flag, like `-e`. You may pass multiple values, so you may pass `-e, --example-option`.

### `metavar`

`metavar` changes what users see in `./pants help` as possible values for the flag. If unspecified, Pants will use a `metavar` based on the `type` you specify.

### `default`
`default` will be used if the user does not specify the value. 

If you leave this off, the `default` will depend on the `type` you specify.

### `type`

Refer to [Options](doc:options#option-types) for how a user specifies these different types. 
[block:parameters]
{
  "data": {
    "h-0": "`type`",
    "h-1": "Default (if not overridden)",
    "h-2": "Other notes",
    "0-0": "`str`",
    "0-1": "`None`",
    "1-0": "`int`",
    "1-2": "Will error if a user passes a `float`.",
    "1-1": "`None`",
    "2-0": "`float`",
    "2-2": "Will convert an `int` into a `float`.",
    "2-1": "`None`",
    "3-0": "`bool`",
    "3-1": "`False` \n\nSet `default=UnsetBool` from `pants.option.custom_types` to represent a trinary state. If the user does not specify a value, the option will return `None`.",
    "4-0": "Enums",
    "4-1": "`None`",
    "4-2": "Create an `enum.Enum`, with the value for each member as a string.\n\nSee below for an example.",
    "5-0": "`list`",
    "5-1": "`[]` (empty list)",
    "5-2": "You must also set `member_type` to one of `str`, `int`, `float`, `dict`, `dir_option`, `file_option`, `target_option`, `shell_str`, or an `Enum`.",
    "6-0": "`dict`",
    "6-2": "",
    "6-1": "`{}` (empty dictionary)",
    "7-0": "`shell_str`",
    "7-1": "`[]` (empty list)",
    "7-2": "You must set `type=list` and `member_type=shell_str`.\n\nPants will [\"shlex\"](https://docs.python.org/3/library/shlex.html) the string passed by the user, i.e. to split on each space.\n\nFor example, `./pants --docformatter-args='--wrap-summaries 100 --wrap-descriptions 100'` will get converted into `[\"--wrap_summaries\", \"100\", \"--wrap-descriptions\", \"100\"]`.\n\nThe type is from `pants.option.custom_types`.",
    "8-0": "`target_option`",
    "8-1": "`None`",
    "8-2": "This behaves like `str`, but changes the `metavar` so that `./pants help` is more useful.\n\nThe type is from `pants.option.custom_types`.",
    "9-0": "`file_option`",
    "9-1": "`None`",
    "9-2": "This behaves like `str`, but changes the `metavar` so that `./pants help` is more useful. It will also validate that the file exists.\n\nThe type is from `pants.option.custom_types`.",
    "10-0": "`dir_option`",
    "10-1": "`None`",
    "10-2": "This behaves like `str`, but changes the `metavar` so that `./pants help` is more useful. It will also validate that the directory exists.\n\nThe type is from `pants.option.custom_types`."
  },
  "cols": 3,
  "rows": 11
}
[/block]
An example of an `Enum`:

```python
from enum import Enum

class LeafyGreens(Enum):
    KALE = "kale"
    SPINACH = "spinach"

register(
    "--vegetable",
    type=LeafyGreens,
    default=LeafyGreens.KALE,
    help="Which veggie Pants should use.",
)
```

### `passthrough`

Set `passthrough=True` if the option should work with the `-- <args>` syntax, e.g. `./pants test app.py -- -v -k demo`.

### `advanced`

If you set `advanced=True`, the option will only show up in `help-advanced`, and not `help`.

You should generally set this value if the option will primarily be used by codebase administrators, such as setting up a config file.

### `help`

This help message will show up when running `./pants help` and `./pants help-advanced`.
[block:api-header]
{
  "title": "Using options in rules"
}
[/block]
To use a `Subsystem` or `GoalSubsystem` in your rule, request it as a parameter. Then, use the property `.options`, followed by the name of the option. Replace any `-` with `_`, e.g. `--my-option` becomes `my_option`.

```python
from pants.engine.rules import rule
...

@rule
async def demo(shellcheck: Shellcheck) -> LintResults:
    if shellcheck.options.skip:
        return LintResults()
    extra_args = shellcheck.options.args
    ...
```
[block:callout]
{
  "type": "info",
  "title": "Tip: teach MyPy about your subsystem",
  "body": "MyPy does not understand the property `.options`. \n\nInstead, you can create a `@property` for each option and use `typing.cast()` to teach MyPy what each value is.\n\n```python\nfrom typing import cast\n\nclass Shellcheck(Subsystem):\n    \"\"\"The Shellcheck linter.\"\"\"\n \n    options_scope = \"shellcheck\"\n    \n    @classmethod\n    def register_options(cls, register):\n        super().register_options(register)\n        register(\n            \"--skip\",\n            type=bool,\n            default=False,\n            help=\"Don't use Shellcheck when running `./pants lint`.\n        )\n    \n    @property\n    def skip(self) -> bool:\n        return cast(bool, self.options.skip)\n```\n\nThis is optional. It can make your call sites simpler and safer thanks to MyPy, but it requires some  boilerplate."
}
[/block]